--- a/BasicForm/css/styles.css
+++ b/BasicForm/css/styles.css
@@ -18,7 +18,7 @@ form {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 2px solid black;
+    border: 2px solid white;
     padding: 20px;
     background-color: black;
 }
